Trying again to fix contact form on iphone

--- a/css/apt_main_page_little.css
+++ b/css/apt_main_page_little.css
@@ -964,7 +964,7 @@ section {
 }
 
 .apt_map{
-    display:inline-block;
+    display:block;
     width:100%;
     height:120px;
 }
@@ -995,9 +995,10 @@ section {
 }
 
 .apt_contact{
-    display:inline-block;
+    clear: both;
+    display:block;
     position:absolute;
-    left: 0px;
+    left: 5px;
     width:80%;
     height:350px;
     padding: 0px 0px 10px 10px;
